// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> error renders 1`] = `
<div
  class="field field--touched field--select"
>
  <label
    class="field__label field__label--touched field__label--select"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <select
    aria-describedby="form-0_mock--error"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--touched field__input--select"
    id="form-0_mock"
  >
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
  <span
    class="field__error field__error--touched field__error--select"
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Select /> help renders 1`] = `
<div
  class="field field--select"
>
  <label
    class="field__label field__label--select"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span
      class="field__help field__help--select"
    >
      Help
    </span>
  </label>
  <select
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--select"
    id="form-0_mock"
  >
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
</div>
`;

exports[`<Select /> label renders 1`] = `
<div
  class="field field--select"
>
  <label
    class="field__label field__label--select"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
  <select
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--select"
    id="form-0_mock"
  >
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
</div>
`;

exports[`<Select /> renders 1`] = `
<div
  class="field field--select"
>
  <label
    class="field__label field__label--select"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <select
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--select"
    id="form-0_mock"
  >
    <option
      value="dog"
    >
      Dog
    </option>
  </select>
</div>
`;
